// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ShortcutKey should match snapshot for contrast key 1`] = `
<mark
  className="shortcut-key shortcut-key--contrast"
>
  Shift
</mark>
`;

exports[`components/ShortcutKey should match snapshot for regular key 1`] = `
<mark
  className="shortcut-key"
>
  Shift
</mark>
`;
